@@ -4,6 +4,7 @@ Development Progress	:
 ---------------------------
 
 2011-07-20 (SVN):
+    * zone.c: Added setup for secondary zone size for CODECS_USE_ZONE.
     * h2config.h: Added memory requirements for mp3 and vorbis decoders
       in preparation for CODECS_USE_ZONE feature.
 
